[package]
name = "ghmd"
version = "0.5.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>", "Jake Schurch <jakeschurch@gmail.com>"]
edition = "2021"
repository = "https://github.com/waynr/ghmd"
readme = "README.md"
license = "MIT"
categories = ['command-line-utilities']
description = "gotta have my dots"

[badges]
is-it-maintained-issue-resolution = { repository = "waynr/ghmd" }
is-it-maintained-open-issues = { repository = "waynr/ghmd" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "ghmd"
path = "src/main.rs"

[dev-dependencies]
dirs = "2.0.2"
tempfile = "3.1.0"

[dependencies]
clap = { version = "3.2", features = ["cargo"] }

# serialization
toml = "0.5.4"
serde = "1.0.102"
serde_derive = "1.0.102"

# file handling
fs_extra = "1.2.0"
block-utils = "0.10.7"
dirs = "2.0.2"
glob = "0.3.0"

# error handling
anyhow = "1.0"
thiserror = "1.0"
